# snoop

./: Makefile  README.md  RELEASING.md  go.mod  integration_test.go  main.go  snoop  todo.md
.github/workflows/: ci.yml  release.yml
audit/: audit.go  audit_test.go  golang.go  maven.go  maven_parser.go  python.go  python_parser.go
formatter/: formatter.go
osv/: osv.go
scanner/: scanner.go  scanner_test.go
security/: security.go  security_test.go
test-project/: package-lock.json  package.json
test-project-go/: go.mod
test-project-maven/: README.md  pom.xml
test-project-python/: Pipfile  README.md  pyproject.toml  requirements.txt
