[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-vulnerable-project"
version = "0.1.0"
description = "Test project with vulnerable Python dependencies"
requires-python = ">=3.8"
dependencies = [
    "Flask==1.0.2",
    "Django==2.2.0",
    "requests==2.20.0",
    "urllib3==1.24.1",
    "Pillow==6.0.0",
    "cryptography==2.6.1",
    "PyYAML==5.1",
    "Jinja2==2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
